# EGoTouchRev

./: .clangd  .gitignore  .gitmodules  .mcp.json  CMakeLists.txt  CMakePresets.json  CMakeSettings.json  LinearFilterProcess.md  README.md  package-lock.json  query
.antigravitycli/: 02e38fcd-7e6f-4a71-972d-3542c1fb269a.json
.github/: copilot-instructions.md
.github/workflows/: build.yml  release.yml
Common/DVRCore/include/: DvrBinaryIO.h  DvrCsvExport.h  DvrFormat.h  DvrFrameSlot.h  DvrTypes.h
Common/DVRCore/source/: DvrBinaryReader.cpp  DvrBinaryWriter.cpp  DvrCsvExport.cpp  DvrTypes.cpp
Common/DVRCore/tests/: DvrCoreBinaryRoundTripTest.cpp  DvrCoreCorruptionNegativeTest.cpp  DvrCoreFixtureCompatibilityTest.cpp  DvrCoreFormatLayoutTest.cpp  DvrCoreRuntimeConfigRoundTripTest.cpp  DvrCoreTestSupport.h
Common/IPCCore/source/: IpcPipeClient.cpp  IpcPipeServer.cpp
Common/IPCCore/tests/: IpcPipeLoopbackTest.cpp  IpcProtocolAbiTest.cpp  IpcSharedFrameBufferTest.cpp
Common/include/: FrameLayout.h  GuiLogSink.h  IpcPipeClient.h  IpcProtocol.h  Logger.h  PenButtonConfig.h  SharedFrameBuffer.h
Common/include/config/: ConfigBinder.h  ConfigCatalog.h  ConfigKeyId.h  ConfigKeyMap.h  ConfigSchemaSnapshot.h  ConfigStore.h  ConfigTlv.h  ConfigValue.h  YamlParser.h
Common/source/: IpcPipeClient.cpp  IpcPipeServer.cpp  Logger.cpp  SharedFrameBuffer.cpp
Common/source/config/: ConfigBinder.cpp  ConfigCatalog.cpp  ConfigKeyMap.cpp  ConfigPath.cpp  ConfigSchemaSnapshot.cpp  ConfigStore.cpp  ConfigTlv.cpp  SchemaValidator.cpp  YamlParser.cpp
Common/tests/: ConfigCatalogTest.cpp  ConfigTlvTest.cpp  FrameLayoutTest.cpp  GuiLogSinkTest.cpp  HeaderCompileTest.cpp  LoggerTest.cpp  PenButtonConfigTest.cpp
EGoTouchService/Device/btmcu/: BtHidChannel.cpp  BtHidChannel.h  PenModuleModelId.h  PenPressurePacketParser.h  PenUsbInitSession.h  PenUsbPacketBuilder.h  PenUsbTransport.h  PenUsbTypes.h
EGoTouchService/Device/common/: StylusState.h
EGoTouchService/Device/himax/: AfeTypes.h  HimaxAfe.cpp  HimaxAfe.h  HimaxChip.cpp  HimaxChipFrame.cpp  HimaxChipLifecycle.cpp  HimaxProtocol.cpp  HimaxProtocol.h
EGoTouchService/Device/penevt/: BTMCU_PROTOCOL.md  PenEventBridge.cpp  PenEventBridge.h
EGoTouchService/Device/penpress/: PenPressureReader.cpp  PenPressureReader.h
EGoTouchService/Device/runtime/: DeviceRuntime.cpp  DeviceRuntime.h
EGoTouchService/Device/tests/: CMakeLists.txt
EGoTouchService/Device/tests/btmcu/: PenFactoryStatusFlagsTest.cpp  PenModuleModelIdTest.cpp  PenPressurePacketParserTest.cpp  PenUsbInitSessionTest.cpp  PenUsbProtocolPacketTest.cpp  PenUsbTransportWin32LifecycleTest.cpp
EGoTouchService/Device/tests/runtime/: DeviceRuntimeSystemPowerPolicyTest.cpp
EGoTouchService/Device/tests/support/: TestRequire.h
EGoTouchService/Device/tests/vhf/: VhfReporterStylusPacketTest.cpp  VhfReporterTouchPacketTest.cpp
EGoTouchService/Device/vhf/: VhfReporter.cpp  VhfReporter.h  VhfReporterStylusPacketHelper.h
EGoTouchService/Device/win32/: SyntheticPenButtonInjector.cpp  SyntheticPenButtonInjector.h
EGoTouchService/Engine/: EngineTypes.h  NeonCompat.h
EGoTouchService/Engine/Reporting/: TouchGestureStateMachine.cpp  TouchGestureStateMachine.h  TouchTracker.cpp  TouchTracker.h
EGoTouchService/Engine/StylusSolver/: AsaTypes.hpp  CommonModeFilter.hpp  (+23 more)
EGoTouchService/Host/: SystemStateEvent.h  SystemStateMonitor.cpp  SystemStateMonitor.h
EGoTouchService/Solvers/: ConfigSchema.h  SolverBuildConfig.h  SolverTypes.h  StylusFrameTypes.h  TouchFrameTypes.h
EGoTouchService/Solvers/tests/: CMakeLists.txt
EGoTouchService/Solvers/tests/perf/: RawdataBenchmark.cpp
EGoTouchService/Solvers/tests/support/: SolverTestAssert.h
EGoTouchService/Solvers/tests/unit/stylus/: StylusHpp2PipelineTest.cpp  StylusHpp3PostPressureTest.cpp  StylusLinearFilterTest.cpp  StylusPipelineConfigRoundTripTest.cpp
EGoTouchService/Solvers/tests/unit/touch/: TouchBaselineSubtractionTest.cpp  TouchCloseSplitTest.cpp  TouchEdgeCompensationTest.cpp  TouchPalmBoxSuppressTest.cpp  TouchPalmClassifierTest.cpp  TouchPipelineConfigRoundTripTest.cpp  TouchStylusSuppressTest.cpp  TouchTrackerGapRelinkTest.cpp
EGoTouchService/include/: ConfigRuntime.h  ConfigTarget.h  ServiceConfigCore.h  ServiceHost.h
EGoTouchService/source/: ConfigRuntime.cpp  ServiceConfigCore.cpp  ServiceHost.cpp  ServiceShell.cpp
Tools/BtMcuTestTool/: BtMcuTestTool.cpp
Tools/tests/: DeviceRuntimeSystemPowerPolicyTest.cpp  DvrRuntimeConfigRoundTripTest.cpp  LoggerTest.cpp  PenUsbInitSessionTest.cpp  PenUsbProtocolTest.cpp  RawdataBenchmarkTest.cpp  ServiceProxyConfigMergeTest.cpp  StylusHpp3PostPressureProcessTest.cpp  StylusLinearFilterProcessTest.cpp  StylusPipelineFastInkTest.cpp  StylusPipelineModulesTest.cpp  SystemStateMonitorNamedEventTest.cpp  TouchEdgeCompensationTest.cpp  TouchPalmRejectionMvpTest.cpp  TouchPipelineConfigRoundTripTest.cpp  TouchTrackerSilentGapTest.cpp  TouchTrackerStylusSuppressTest.cpp  VhfReporterStylusPacketTest.cpp
cmake/: VerifyConfigLayout.cmake
config/: default.yaml  stylus_pipeline_config.yaml  touch_pipeline_config.yaml
docs/: EGoTouchService_模块层级-优先度审查清单.md  HPP3_Algorithm_Analysis_Detailed.md  HPP3_PenDownUp_Pseudocode.md  TSA_MSProcess_Algorithm_Architecture.md  architecture_overview.md  architecture_redesign.md  dvr_architecture_analysis.md  implementation_plan.md  ipc_interface_protocol.md  task.md  touch_palm_rejection_refactor_plan.md  touch_pipeline_architecture.md  touch_solver_refactor_implementation_spec.md  tsa_msprocess_finger_pipeline.md  差异.md
docs/api/: config_framework_api.md  ipc_protocol.md  shared_memory_abi.md
docs/逆向/: NoPressInk_and_TX1GridDataProcess_analysis.md  frame_memory_layout.md  hpp3_pressure_lookahead_hover_mode.md  new_stylus_analysis.md  tilt_process.md  tx1_coordinate_process.md  手写笔参数表对应.md
reports/: TSA_MSProcess_Algorithm_Architecture.md
scripts/: EGoTouchSetup.wxs  EGoTouchTestSetup.wxs  EULA_zh-CN.rtf  config_key_sync.py  en-US.wxl  install_service.bat  pack_release_version.bat  pack_test_version.bat  tsaprmt_export.py  zh-CN.wxl
(+157 files in other folders)
